--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@ header {
 }
 
 li {
+  cursor: pointer;
   width:10%;
   float:left;
   list-style: none;
@@ -15,21 +16,64 @@ li {
   font-weight:900;
   text-transform: uppercase;
   height:50px;
-
+  position: relative;
+  background: rgb(255,255,255); /* Old browsers */
+  background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(209,238,255,1) 100%); /* FF3.6-15 */
+  background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%,rgba(209,238,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: radial-gradient(ellipse at center, rgba(255,255,255,1) 0%,rgba(209,238,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+}
+li:hover {
+  box-shadow: 0px 7px 13px -3px #333;
 }
 li span {
+  position: relative;
+  z-index: 10;
+}
 
+.multipleOf3:before {
+  content:"3";
+  color:rgba(255,0,255,.5);
+  position: absolute;
+  height:100%;
+  width:100%;
+  z-index: 0;
+  line-height: .8em;
+  font-size:4em;
+  top:0;
+  left:0;
 }
 
 .multipleOf3 {
 
 }
 
-.multipleOf5 {
-
+.multipleOf5:before {
+  content:"5";
+  color:rgba(255,0,255,.5);
+  position: absolute;
+  height:100%;
+  width:100%;
+  z-index: 0;
+  line-height: .8em;
+  font-size:4em;
+  top:0;
+  left:0;
 }
 
-.multipleOf15 {
+.multipleOf15 span {
   position: relative;
   top:-9px;
+}
+
+.multipleOf15:before {
+  content:"15";
+  color:rgba(255,0,255,.5);
+  position: absolute;
+  height:100%;
+  width:100%;
+  z-index: 0;
+  line-height: .8em;
+  font-size:4em;
+  top:0;
+  left:0;
 }
